--- a/Zbang.Cloudents.Mvc4WebRole/Content/BoxFeedRtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/BoxFeedRtl.css
@@ -91,7 +91,7 @@
 }
 .attachedList {
   margin: 0 55px 0 0;
-  padding: 0 12px 3px 8px;
+  padding: 0 12px 5px 8px;
 }
 .attachedItem {
   padding: 0 6px 0 0;
