--- a/Zbang.Cloudents.Mvc4WebRole/Content/GeneralRtl.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/GeneralRtl.less
@@ -218,6 +218,10 @@ input[type="radio"] {
 .svg-notification {
     .flipH; //from SVG.less
 }
+.svg-user, .svg-doc {
+    right: 4px;
+    left: auto
+}
 /*#endregion*/
 
 /*#region side menu - SettingsBar partial */
